style: edited content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <h1>Random Color Generator</h1>
-      <span>#ffff</span>
+      <p>Color hex code is: #ffff</p>
       <button>Generate Color</button>
     </main>
     <script src="js/main.js"></script>
