feat: added functions

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <main>
       <h1>Random Color Generator</h1>
-      <p>Color hex code is: #ffff</p>
-      <button>Generate Color</button>
+      <p id="color">Do you wanna see new color?</p>
+      <button id="btn" onclick="getRandomColor()">Generate Color</button>
     </main>
     <script src="js/main.js"></script>
   </body>
