--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <h1>Random Color Generator</h1>
-      <p id="color">Do you wanna see new color?</p>
+      <p id="color">Do you wanna see a new color?</p>
       <button id="btn" onclick="getRandomColor()">Generate Color</button>
     </main>
     <script src="js/main.js"></script>
