chore: deleted button id

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <h1>Random Color Generator</h1>
       <p id="color">Do you wanna see a new color?</p>
-      <button id="btn" onclick="getRandomColor()">Generate Color</button>
+      <button onclick="getRandomColor()">Generate Color</button>
     </main>
     <script src="js/main.js"></script>
   </body>
